--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -13,7 +13,7 @@
 	<script type="text/javascript" src="bibles/kjv.js"></script>
 	<script type="text/javascript" src="bibles/bbe.js"></script>
 </head>
-<body>
+<body onmousedown="session.mouseDown = true" onmouseup="session.mouseDown = false">
 <div id="top">
 	<center>
 		<select id="book" onchange="update()"></select>
@@ -27,12 +27,15 @@
 	<p id="page">
 		
 	</p>
+	<iframe id="kjvOnline" src="google.com" onmouseover="settings('close')">
+		
+	</iframe>
 </div>
 <div id="bottom">
-	<div class="button" style="float: left;" onclick="update('previous')">
+	<div class="button left" onclick="update('previous')">
 		<span>Previous</span>
 	</div>
-	<div class="button" style="float: right;" onclick="update('next')">
+	<div class="button right" onclick="update('next')">
 		<span>Next</span>
 	</div>
 </div>
@@ -50,7 +53,20 @@
 		<span>Version 1.3</span>
 		<br><br>
 		<input id="search" placeholder="John 3:16">
-		<br><br><hr>
+		<br><hr>
+		<span>Current Translation:</span>
+		<select id="translation" onchange="update()">
+			<option>
+				BBE (Bible in Basic English) (Offline)
+			</option>
+			<option>
+				KJV (King James Version) (Offline)
+			</option>
+			<option>
+				KJV (King James Version) (Online)
+			</option>
+		</select>
+		<br><hr>
 		<div id="iconToolbar">
 			<div class="icon">
 				<img src="images/settings.svg" width="45" onclick="activity.settings()">
